# linux_audit_cli

./: .gitignore  README.md  pyproject.toml
src/audit_pkg/: cli.py  logger.py  permissions.py  report.py  scanner.py  utils.py
src/linuxaudit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_permissions.py  test_scanner.py
